--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,29 +2,29 @@
     --main-color: #1a1a1a;
     --hover-color: #7DCEA0;
 }
-
 body {
     box-sizing: border-box;
     padding: 0;
     margin:  0;
     font-family: Arial, Helvetica, sans-serif;
+    text-transform: uppercase;
+    background-color: whitesmoke;
 }
 
 header {
     padding: 30px;
-    height: 50px;
+    max-height: 50px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    background-image: linear-gradient(rgba(34, 34, 34, 0.4) 0%, rgba(34, 34, 34, 1) 100%);
+    background-image: linear-gradient(rgba(213, 207, 207, 0.4) 0%, rgb(255, 255, 255) 100%);
 }
 header h1 {
     text-transform: uppercase;
     letter-spacing: 5px;
     font-size: 300%;
     font-weight: lighter;
-    /* border-bottom: 5px solid var(--undeline-color); */
 }
 
 .main-nav ul {
@@ -48,68 +48,73 @@ header h1 {
 }
 
 .cover-photo {
-    background-image: url('/Users/chaz/Bootcamp/week2/portfolio-am/assets/images/black-background.jpg');
+    background-image: url('/Users/chaz/Bootcamp/week2/portfolio-am/assets/images/van.jpg');
     background-size: cover;
     height: 400px;
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
+    box-shadow: -4px -2px 50px 25px rgba(0, 0, 0, 0.5);
 }
 .cover-photo h2 {
     font-weight: lighter;
-    margin-right: 50px;
+    margin-right: 15px;
     padding: 15px;
     border-radius: 25px;
     color: white;
     background-color: var(--hover-color);
 }
-@media screen and (max-width: 700px) {
-    header {
-        padding: 30px;
-        height: 50px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: flex-start;
-        background-image: linear-gradient(rgba(34, 34, 34, 0.4) 0%, rgba(34, 34, 34, 1) 100%);
-        flex-wrap: wrap;
-        height: 300px;
-        padding-top: 0;
-        padding-bottom: 0;
-    }
-    .main-nav ul {
-        list-style-type: none;
-        display: flex;
-        flex-direction: row;
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-    header h1 {
-        
-    }
+.main-content {
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
-.container {
+.row {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;  
-    margin-top: 40px;
+    justify-content: flex-start;  
     align-items: center;
-    
+    width: 100%;
+   
 
 }
-.container h2 {
-    min-width: 20%;
+.title {
+    width: 25%;
+    font-size: 150%; 
+    height: 200px;
     display: flex;
+    align-items: center;
     justify-content: center;
-    text-transform: uppercase;
-    border-right: 5px solid;
-    padding: 50px;
+    margin: 10px 0;
+
 }
-.container h2:hover {
-    color: var(--hover-color);
-    border-color: var(--hover-color);
+.content {
+    width: 75%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    padding: 30px;
+    border-left: 5px solid var(--main-color);
 }
-.info-content {
-    padding: 40px;
+.work-content {
+    display: flex;
+    flex-wrap: wrap-reverse;
+    justify-content: flex-start;
 }
+.work-links {
+    background-color: slateblue;
+    height: 400px;
+    width: 495px;
+    margin: 5px;
+    flex-grow: 1;
+    flex-shrink: 2;
+}
+.main-job {
+    flex-grow: 2;
+    order: 1;
+}
+.footer-content {
+    display: flex;
+    justify-content: space-around;
+}
+
 
